src/graphql-shorthand.ts
// tslint:disable:only-arrow-functions
// tslint:disable:object-literal-shorthand
// tslint:disable:trailing-comma
// tslint:disable:object-literal-sort-keys
// tslint:disable:one-variable-per-declaration
// tslint:disable:max-line-length
// tslint:disable:no-consecutive-blank-lines
// tslint:disable:align


// Generated by PEG.js v. 0.10.0 (ts-pegjs plugin v. 0.1.13 )
//
// https://pegjs.org/   https://github.com/metadevpro/ts-pegjs

export class SyntaxError extends Error {
  public static buildMessage(expected: string, found: string) {
    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map((part) => {
          return Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part);
        });

        return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
      },

      any(): string {
        return "any character";
      },

      end(): string {
        return "end of input";
      },

      other(expectation): string {
        return expectation.description;
      }
    };

    function hex(ch: string): string {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function classEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected1) {
      const descriptions = expected1.map(describeExpectation);
      let i;
      let j;

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found1) {
      return found1 ? "\"" + literalEscape(found1) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }

  public message: string;
  public expected: string;
  public found: string;
  public location: any;
  public name: string;

  constructor(message: string, expected: string, found: string, location) {
    super();
    this.message = message;
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";

    if (typeof (Error as any).captureStackTrace === "function") {
      (Error as any).captureStackTrace(this, SyntaxError);
    }
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};

  const peg$startRuleFunctions = { start: peg$parsestart };
  let peg$startRuleFunction = peg$parsestart;

  const peg$c0 = function(definitions) { return definitions; };
  const peg$c1 = /^[a-z0-9_]/i;
  const peg$c2 = peg$classExpectation([["a", "z"], ["0", "9"], "_"], false, true);
  const peg$c3 = /^[.+\-]/;
  const peg$c4 = peg$classExpectation([".", "+", "-"], false, false);
  const peg$c5 = /^[0-9]/;
  const peg$c6 = peg$classExpectation([["0", "9"]], false, false);
  const peg$c7 = /^[.]/;
  const peg$c8 = peg$classExpectation(["."], false, false);
  const peg$c9 = "enum";
  const peg$c10 = peg$literalExpectation("enum", false);
  const peg$c11 = function(description, name, values) { return clean({ type: "ENUM", name, description, values }); };
  const peg$c12 = "interface";
  const peg$c13 = peg$literalExpectation("interface", false);
  const peg$c14 = function(description, name, interfacename) { return interfacename; };
  const peg$c15 = function(description, name, implts, fields) { return clean({ type: "INTERFACE", name, description, fields, implements:implts }); };
  const peg$c16 = "scalar";
  const peg$c17 = peg$literalExpectation("scalar", false);
  const peg$c18 = function(description, name, d) {return d;};
  const peg$c19 = function(description, name, directives) { return clean({ type: "SCALAR", name, description, directives }); };
  const peg$c20 = "union";
  const peg$c21 = peg$literalExpectation("union", false);
  const peg$c22 = function(description, name, values) { return clean({ type: "UNION", name, description, values }); };
  const peg$c23 = "type";
  const peg$c24 = peg$literalExpectation("type", false);
  const peg$c25 = function(description, name, implts, fields) { return clean({ type: "TYPE", name, description, fields, implements:implts }); };
  const peg$c26 = "schema";
  const peg$c27 = peg$literalExpectation("schema", false);
  const peg$c28 = function(description, fields) { return clean({ type: "SCHEMA", description, fields }); };
  const peg$c29 = "extend";
  const peg$c30 = peg$literalExpectation("extend", false);
  const peg$c31 = function(description, name, fields) { return clean({ type: "EXTEND_TYPE", name, description, fields }); };
  const peg$c32 = "directive";
  const peg$c33 = peg$literalExpectation("directive", false);
  const peg$c34 = "on";
  const peg$c35 = peg$literalExpectation("on", false);
  const peg$c36 = function(description, directive, on) { return clean({ type: "DIRECTIVE", directive, description, on }); };
  const peg$c37 = "@";
  const peg$c38 = peg$literalExpectation("@", false);
  const peg$c39 = "(";
  const peg$c40 = peg$literalExpectation("(", false);
  const peg$c41 = ")";
  const peg$c42 = peg$literalExpectation(")", false);
  const peg$c43 = function(name, d) { return d; };
  const peg$c44 = function(name, content) { return content? {name, content}:{name}; };
  const peg$c45 = function(char) { return char; };
  const peg$c46 = function(comment) { return comment.join("").trim(); };
  const peg$c47 = "/*";
  const peg$c48 = peg$literalExpectation("/*", false);
  const peg$c49 = "*/";
  const peg$c50 = peg$literalExpectation("*/", false);
  const peg$c51 = function(comment) { return comment.join("").replace(/\n\s*[*]?\s*/g, " ").replace(/\s+/, " ").trim(); };
  const peg$c52 = function(head, c) { return c; };
  const peg$c53 = function(head, tail) { return [head, ...tail].join('\n'); };
  const peg$c54 = "input";
  const peg$c55 = peg$literalExpectation("input", false);
  const peg$c56 = function(description, name, list) { return list; };
  const peg$c57 = function(description, name, interfaces, fields) { return clean({ type: "INPUT", name, description, fields, interfaces }); };
  const peg$c58 = "!";
  const peg$c59 = peg$literalExpectation("!", false);
  const peg$c60 = function(type, required) { return { type,  ...(required && { required: !!required }) } };
  const peg$c61 = "[";
  const peg$c62 = peg$literalExpectation("[", false);
  const peg$c63 = "]";
  const peg$c64 = peg$literalExpectation("]", false);
  const peg$c65 = function(type, required) { return { type, array: true, ...(required && { required: !!required }) } };
  const peg$c66 = function(head, type) { return type; };
  const peg$c67 = function(head, tail) { return [head, ...tail]; };
  const peg$c68 = function(description, name, fields) { return fields; };
  const peg$c69 = function(description, name, args, type, v) { return v; };
  const peg$c70 = function(description, name, args, type, defaultValue, d) {return d;};
  const peg$c71 = function(description, name, args, type, defaultValue, directives) { return clean({ [name]: { ...type, ...(args && { args }), description, defaultValue, directives } }); };
  const peg$c72 = function(head, field) { return field; };
  const peg$c73 = function(head, tail) { return [head, ...tail].reduce((result, field) => ({ ...result, ...field }), {}); };
  const peg$c74 = function(description, name, args, type, defaultValue) { return clean({ [name]: { ...type, ...(args && { args }), description, defaultValue } }); };
  const peg$c75 = function(description, name) { return {...(description && { description }), name }; };
  const peg$c76 = function(head, value) { return value; };
  const peg$c77 = function(head, tail) { return [head, ...tail].slice(0,-1); };
  const peg$c78 = function(chars) { return chars.join(""); };
  const peg$c79 = "\"";
  const peg$c80 = peg$literalExpectation("\"", false);
  const peg$c81 = peg$anyExpectation();
  const peg$c82 = function() { return text(); };
  const peg$c83 = "\\";
  const peg$c84 = peg$literalExpectation("\\", false);
  const peg$c85 = "true";
  const peg$c86 = peg$literalExpectation("true", false);
  const peg$c87 = function() { return true };
  const peg$c88 = "false";
  const peg$c89 = peg$literalExpectation("false", false);
  const peg$c90 = function() { return false };
  const peg$c91 = function(value) { return Number(value.replace(/^[.]/, '0.')); };
  const peg$c92 = function(l) { return l;};
  const peg$c93 = function(letters) { return letters ? letters.join('') : ""; };
  const peg$c94 = "FIELD_DEFINITION";
  const peg$c95 = peg$literalExpectation("FIELD_DEFINITION", false);
  const peg$c96 = function() { return "schema" };
  const peg$c97 = "FIELD";
  const peg$c98 = peg$literalExpectation("FIELD", false);
  const peg$c99 = function() { return "query" };
  const peg$c100 = "#";
  const peg$c101 = peg$literalExpectation("#", false);
  const peg$c102 = "//";
  const peg$c103 = peg$literalExpectation("//", false);
  const peg$c104 = /^[ \t]/;
  const peg$c105 = peg$classExpectation([" ", "\t"], false, false);
  const peg$c106 = "\n";
  const peg$c107 = peg$literalExpectation("\n", false);
  const peg$c108 = "\r\n";
  const peg$c109 = peg$literalExpectation("\r\n", false);
  const peg$c110 = "\r";
  const peg$c111 = peg$literalExpectation("\r", false);
  const peg$c112 = "\u2028";
  const peg$c113 = peg$literalExpectation("\u2028", false);
  const peg$c114 = "\u2029";
  const peg$c115 = peg$literalExpectation("\u2029", false);
  const peg$c116 = "{";
  const peg$c117 = peg$literalExpectation("{", false);
  const peg$c118 = "}";
  const peg$c119 = peg$literalExpectation("}", false);
  const peg$c120 = "implements";
  const peg$c121 = peg$literalExpectation("implements", false);
  const peg$c122 = ":";
  const peg$c123 = peg$literalExpectation(":", false);
  const peg$c124 = "=";
  const peg$c125 = peg$literalExpectation("=", false);
  const peg$c126 = ",";
  const peg$c127 = peg$literalExpectation(",", false);
  const peg$c128 = "|";
  const peg$c129 = peg$literalExpectation("|", false);

  let peg$currPos = 0;
  let peg$savedPos = 0;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = 0;
  let peg$maxFailExpected: any[] = [];
  let peg$silentFails = 0;

  let peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text(): string {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location1?) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location1
    );
  }

  function error(message: string, location1?) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location1);
  }

  function peg$literalExpectation(text1: string, ignoreCase: boolean) {
    return { type: "literal", text: text1, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase: boolean) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos: number) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos: number, endPos: number) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected1) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected1);
  }

  function peg$buildSimpleError(message, location1) {
    return new SyntaxError(message, "", "", location1);
  }

  function peg$buildStructuredError(expected1, found, location1) {
    return new SyntaxError(
      SyntaxError.buildMessage(expected1, found),
      expected1,
      found,
      location1
    );
  }

  function peg$parsestart() {
    let s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseSPACE_EOL();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseSPACE_EOL();
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parseEnum();
      if (s3 === peg$FAILED) {
        s3 = peg$parseInterface();
        if (s3 === peg$FAILED) {
          s3 = peg$parseObject();
          if (s3 === peg$FAILED) {
            s3 = peg$parseUnion();
            if (s3 === peg$FAILED) {
              s3 = peg$parseInputObject();
              if (s3 === peg$FAILED) {
                s3 = peg$parseScalar();
                if (s3 === peg$FAILED) {
                  s3 = peg$parseExtend();
                  if (s3 === peg$FAILED) {
                    s3 = peg$parseDirective();
                    if (s3 === peg$FAILED) {
                      s3 = peg$parseSchema();
                    }
                  }
                }
              }
            }
          }
        }
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parseEnum();
        if (s3 === peg$FAILED) {
          s3 = peg$parseInterface();
          if (s3 === peg$FAILED) {
            s3 = peg$parseObject();
            if (s3 === peg$FAILED) {
              s3 = peg$parseUnion();
              if (s3 === peg$FAILED) {
                s3 = peg$parseInputObject();
                if (s3 === peg$FAILED) {
                  s3 = peg$parseScalar();
                  if (s3 === peg$FAILED) {
                    s3 = peg$parseExtend();
                    if (s3 === peg$FAILED) {
                      s3 = peg$parseDirective();
                      if (s3 === peg$FAILED) {
                        s3 = peg$parseSchema();
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$parseSPACE_EOL();
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$parseSPACE_EOL();
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseFieldIdent() {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    if (peg$c1.test(input.charAt(peg$currPos))) {
      s2 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c2); }
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      if (peg$c1.test(input.charAt(peg$currPos))) {
        s2 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c2); }
      }
    }
    if (s1 !== peg$FAILED) {
      s0 = input.substring(s0, peg$currPos);
    } else {
      s0 = s1;
    }

    return s0;
  }

  function peg$parseTypeIdent() {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    if (peg$c1.test(input.charAt(peg$currPos))) {
      s2 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c2); }
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      if (peg$c1.test(input.charAt(peg$currPos))) {
        s2 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c2); }
      }
    }
    if (s1 !== peg$FAILED) {
      s0 = input.substring(s0, peg$currPos);
    } else {
      s0 = s1;
    }

    return s0;
  }

  function peg$parseDirectiveIdent() {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    if (peg$c1.test(input.charAt(peg$currPos))) {
      s2 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c2); }
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      if (peg$c1.test(input.charAt(peg$currPos))) {
        s2 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c2); }
      }
    }
    if (s1 !== peg$FAILED) {
      s0 = input.substring(s0, peg$currPos);
    } else {
      s0 = s1;
    }

    return s0;
  }

  function peg$parseEnumIdent() {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    if (peg$c1.test(input.charAt(peg$currPos))) {
      s2 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c2); }
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      if (peg$c1.test(input.charAt(peg$currPos))) {
        s2 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c2); }
      }
    }
    if (s1 !== peg$FAILED) {
      s0 = input.substring(s0, peg$currPos);
    } else {
      s0 = s1;
    }

    return s0;
  }

  function peg$parseNumberIdent() {
    let s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = peg$currPos;
    if (peg$c3.test(input.charAt(peg$currPos))) {
      s2 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c4); }
    }
    if (s2 === peg$FAILED) {
      s2 = null;
    }
    if (s2 !== peg$FAILED) {
      s3 = [];
      if (peg$c5.test(input.charAt(peg$currPos))) {
        s4 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c6); }
      }
      if (s4 !== peg$FAILED) {
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          if (peg$c5.test(input.charAt(peg$currPos))) {
            s4 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c6); }
          }
        }
      } else {
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$currPos;
        if (peg$c7.test(input.charAt(peg$currPos))) {
          s5 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c8); }
        }
        if (s5 !== peg$FAILED) {
          s6 = [];
          if (peg$c5.test(input.charAt(peg$currPos))) {
            s7 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s7 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c6); }
          }
          if (s7 !== peg$FAILED) {
            while (s7 !== peg$FAILED) {
              s6.push(s7);
              if (peg$c5.test(input.charAt(peg$currPos))) {
                s7 = input.charAt(peg$currPos);
                peg$currPos++;
              } else {
                s7 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c6); }
              }
            }
          } else {
            s6 = peg$FAILED;
          }
          if (s6 !== peg$FAILED) {
            s5 = [s5, s6];
            s4 = s5;
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
        if (s4 === peg$FAILED) {
          s4 = null;
        }
        if (s4 !== peg$FAILED) {
          s2 = [s2, s3, s4];
          s1 = s2;
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
    } else {
      peg$currPos = s1;
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      s0 = input.substring(s0, peg$currPos);
    } else {
      s0 = s1;
    }

    return s0;
  }

  function peg$parseEnum() {
    let s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = peg$parseCommentList();
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    if (s1 !== peg$FAILED) {
      if (input.substr(peg$currPos, 4) === peg$c9) {
        s2 = peg$c9;
        peg$currPos += 4;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c10); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseSPACE();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseTypeIdent();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseBEGIN_BODY();
            if (s5 !== peg$FAILED) {
              s6 = peg$parseEnumList();
              if (s6 !== peg$FAILED) {
                s7 = peg$parseCLOSE_BODY();
                if (s7 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c11(s1, s4, s6);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseInterface() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8;
